Fix alignment between icons on left and right of screen
- Table of contents arrows are now aligned with sticky header search/hamburger
- The user menu dropdown now aligns with more and languages button

Bug: T321504

--- a/resources/skins.vector.styles/components/LanguageButton.less
+++ b/resources/skins.vector.styles/components/LanguageButton.less
@@ -17,6 +17,21 @@
 	// FIXME: Remove mixin when this block is removed.
 	.vector-feature-visual-enhancement-next-disabled & {
 		.mixin-vector-flush-right-margin-right();
+
+		.mw-ui-icon-flush-right {
+			margin-right: 0;
+		}
+	}
+
+	// The language button is a BUTTON ICON not a standalone ICON so different rules apply
+	// It might make sense to have a mw-ui-icon-flush-right-button class in core to replace this.
+	&.mw-ui-icon-flush-right {
+		// FIXME: Promote when flag removed.
+		.vector-feature-visual-enhancement-next-enabled & {
+			// This number should be synced with the value in:
+			// https://github.com/wikimedia/mediawiki/blob/master/resources/src/mediawiki.less/mediawiki.ui/mixins.buttons.less#L33
+			margin-right: -12px;
+		}
 	}
 
 	// If there are no languages and JavaScript is not enabled there is no fallback so we hide
