--- a/resources/skins.vector.styles/components/UserLinks.less
+++ b/resources/skins.vector.styles/components/UserLinks.less
@@ -31,10 +31,12 @@
 		margin: 0;
 	}
 
-	// T319070
-	.mw-portlet-personal {
+	// By default all dropdowns introduce a arrow.
+	// In anonymous mode we use an ellipsis so the arrow is unnecessary.
+	// Reset it so that it doesn't displace other elements.
+	.mw-ui-icon-wikimedia-ellipsis:after {
 		.vector-feature-visual-enhancement-next-enabled & {
-			width: unit( 48 / @font-size-browser / @font-size-user-links, em );
+			content: none;
 		}
 	}
 }
@@ -43,6 +45,12 @@
  * Both logged-in and logged-out dropdown menus.
  */
 .vector-user-menu {
+	&.mw-ui-icon-flush-right {
+		.vector-feature-visual-enhancement-next-disabled & {
+			margin-right: 0;
+		}
+	}
+
 	.vector-menu-content {
 		left: auto;
 		right: 0;
